# Coursework2_PDE4430_mobile_robots

./: README.md
Ball_robot/: CMakeLists.txt  package.xml
Ball_robot/config/: hand_controller.yaml  joint_names_Ball_robot.yaml
Ball_robot/launch/: coursework.launch  display.launch  gazebo.launch  robot.launch
Ball_robot/meshes/: LC.STL  LH.STL  LW.STL  RC.STL  RH.STL  RW.STL  base_link.STL
Ball_robot/scripts/: Keyboard_control.py  gripper.py  keyboard.py
Ball_robot/urdf/: Ball_robot.csv  Ball_robot.urdf  note
assessment_world/: CMakeLists.txt
ballrobot/: CMakeLists.txt  package.xml
ballrobot/config/: joint_names_ballrobot.yaml
ballrobot/launch/: display.launch  gazebo.launch
ballrobot/meshes/: FL_Wheel.STL  FR_Wheel.STL  L_hand.STL  RL_Wheel.STL  RR_Wheel.STL  R_hand.STL  base_link.STL
ballrobot/urdf/: ballrobot.csv  ballrobot.urdf
